traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:18: error: not found: value x
      setPos(x + 1, y)
             ^TraversalByColumn:23: error: not found: value x
        setPos(x + 1, y + 1)
               ^TraversalByColumn:26: error: not found: value x
        setPos(x + 1, y - 1)
               ^TraversalByColumn:30: error: not found: value x
        setPos(x, y + 1)
               ^TraversalByColumn:32: error: not found: value x
        setPos(x, y - 1)
               ^