traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var cpt:Int = 0
  var descend:Boolean = true
  
  while(!positionFinale()){
    avancer()
  }
  
  def positionFinale():Boolean = {
    if(getX() == getMondeLargeur() && getY() == getMondeHauteur())
    	return true
    else return false
  }
  
  def avancer() {
    var hauteur:Int = getMondeHauteur()
    var y:Int = getY()
    if(y == 0 || y == hauteur) {
      setPos(x + 1, y)
      cpt += 1
    	ecritMessage(cpt)
      if(y == 0) {
      	descend == true
      	setPos(x + 1, y + 1)
      } else if(y == hauteur) {
      	descend == false
      	setPos(x + 1, y - 1)
      }
    } else {
      if(descend)
      	setPos(x, y + 1)
      else
      	setPos(x, y - 1)
      cpt += 1
    	ecritMessage(cpt)
    }
  }
}